--- a/BarcodeScannerApp/eas.json
+++ b/BarcodeScannerApp/eas.json
@@ -1,9 +1,13 @@
 {
-    "build": {
-      "preview": {
-        "android": {
-          "buildType": "apk"
-        }
+  "cli": {
+    "appVersionSource": "remote"
+  },
+  "build": {
+    "preview": {
+      "android": {
+        "buildType": "apk"
       }
-    }
+    },
+    "production": {}
   }
+}
