--- a/BarcodeScannerApp/package.json
+++ b/BarcodeScannerApp/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -16,15 +16,15 @@
     "@react-navigation/native": "^7.1.3",
     "@react-navigation/stack": "^7.2.7",
     "axios": "^1.8.4",
-    "expo": "~52.0.42",
-    "expo-barcode-scanner": "^13.0.1",
+    "expo": "^52.0.44",
     "expo-camera": "~16.0.18",
-    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.8",
-    "react-native-web": "~0.19.13"
+    "react-native": "0.76.9",
+    "react-native-vision-camera": "^4.6.4",
+    "react-native-web": "~0.19.13",
+    "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
